ajout article et image

--- a/musique.html
+++ b/musique.html
@@ -102,7 +102,15 @@
 			LENNY
 		</h2>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+		<img src="triggerfinger.jpg" width="350" height="300">
+
+			Triggerfinger, trio Belge composé de Ruben Block, le charismatique chanteur et guitariste, Paul Van Bruystegem à la basse et Mario Goossens à la batterie. Ce groupe à qui on peut attribuer plusieurs styles tant leurs morceaux sont variés. Du Pop-rock au Stonner en passant par le Blues.
+
+Leur dernier album « By Absence of the Sun » enregistré au Sunset Sound Studio’s à Los Angeles, est disponible dans les bacs depuis le 18 Avril 2014. Dès la première écoute on est littéralement plongé dans l’univers de la troupe. Des textes aux sujets plutôt variés entre la critique de la violence dans « Game » ou encore la recherche du parfait amour avec « Perfect Match ». Quelques morceaux ont retenu beaucoup plus mon attention. 
+Tout d’abord « Big Hole » avec sa sonorité très Stonner est définitivement ma préférée. Un son de guitare très gras et saturé accompagné par une basse « groove » et un rythme de batterie calme et apaisant qui suit la voix du chanteur. Ensuite le titre « Splendor in the grass » calme et mélodique qui nous évade avec son texte sur la liberté. Enfin « Halfway there », un peu atypique avec un style légèrement psychédélique. Un chant accompagné de chœurs et d’une ambiance hypnotisante. Les bruits de bouches qui donnent le rythme nous montre également ce côté un peu décalé du morceau. Ce groupe était une découverte totale pour moi. Eh bien franchement je ne suis pas déçu ! J’ai donc commencé par le dernier album qui est un bon équilibre de plusieurs styles. L’ordre des pistes est fait de sorte qu’un morceau calme soit entre deux morceaux plus pêchus. On ne s’ennuie pas du début à la fin et d’ailleurs on la regrette presque cette fin. 
+
+Ce disque s’adresse à un public très large puisque, préconisant plusieurs styles différents, il attire aussi bien les fans de Pop-rock, de Stonner, de Rock et même de Blues. Bref un large panel. On ne peut pas parler de « génération » ici car on réunit tout le monde.
+
 		</p>
 		<h3>Source : <a href="#">blabla</a>
 		</h3>
