modif fichier zik

--- a/musique.html
+++ b/musique.html
@@ -55,6 +55,7 @@
 			ORPHYSE
 		</h2>
 		<p>
+<img SRC='reggaesunska.jpg' width='370px'>
 			REGGAE SUN SKA
 
 Nous sommes fin prêts pour cette 18ème édition qui aura lieu les 7,8 et 9 août sur le campus universitaire de Bordeaux. Nouveautés, challenges et musique sont au programme.
